# era

./: CMakeLists.txt
include/era/config/: data.h  emitter.h  parser.h  reader.h  variant.h  writer.h
include/era/geometry/: math.h  mesh.h  primitives.h  rasterizer.h
include/era/io/: json_writer.h
src/config/: emitter.cpp  parser.cpp
src/geometry/: primitives.cpp  rasterizer.cpp
src/io/: json_writer.cpp
test/: test_config.cpp  test_rasterizer.cpp
